# ringsnap

./: .env  .env.example  .env.provisioning.example  .env.test.example  .gitignore  .mcp.json  AGENTS.md  AI-assisted singnup and onboarding.md  ANTIGRAVITY_AUDIT_PLAN.md  ARCHITECTURE.md  ASYNC_PROVISIONING_IMPLEMENTATION.md  ASYNC_VAPI_FIX_DEPLOYMENT.md  AUDIT-SUMMARY.md  AUTHENTICATION_FIX_IMPLEMENTATION_PLAN.md  AUTHENTICATION_SYSTEM_AUDIT_REPORT.md  AUTH_FIXES_AND_TEST_PLAN.md  CHECK_ENV_VARS.sql  CLAUDE.md  CLEANUP_AND_TEST.sql  CODEBASE_AUDIT_REPORT.md  CREATE_TRIAL_REFACTOR_SUMMARY.md  CRITICAL_FIX_SUMMARY.md  CTO_REVIEW.md  DASHBOARD_FIX_PLAN.md  DEBUG_GUIDE.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TRIAL_ONBOARDING.md  DEPLOY_AUTH_FUNCTIONS.md  DEPLOY_EDGE_FUNCTIONS.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_INSTRUCTIONS.txt  DEPLOY_PROFILE_FIX.md  DEPLOY_THIS_EDGE_FUNCTION.ts  DIAGNOSTIC_CHECKLIST.md  DIAGNOSTIC_QUERIES.sql  DOCS_AUTH_AUDIT.md  DOCS_AUTH_FLOW.md  EDGE_FUNCTION_ERROR_FIX.md  (+111 more)
ringsnap_ops_flow/: .env.example  Dockerfile  README.md  crewai.yaml  docker-compose.yml  pyproject.toml
ringsnap_ops_flow/config/: ops_config.yaml
ringsnap_ops_flow/docs/: amp-setup.md
ringsnap_ops_flow/docs/runbooks/: cost_spike.md  incident.md  onboarding_stall.md  rollback.md  (+2 more)
ringsnap_ops_flow/tests/: conftest.py  test_adapters.py  test_config.py  test_event_gate.py  test_funnel_tracker.py  test_onboarding_handler.py  test_payment_handler.py  test_provisioning_handler.py  test_retry_handler.py  test_signup_handler.py  test_state.py
(+917 files in other folders)
